--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,20 @@
     cursor: pointer;
 }
 
+.horizontal {
+    width: 100%;
+    height: auto;
+    display: inline-block;
+    margin: auto;
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 1024px) {
+    .horizontal {
+        width: 40%;
+    }
+}
+
 .badge {
     margin: auto;
     height: 50px;
