--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
     cursor: pointer;
 }
 
+.slide2 {
+    height: 430px;
+    width: auto;
+    display: inline-block;
+    margin: auto;
+    cursor: pointer;
+}
+
 .horizontal {
     width: 100%;
     height: auto;
