--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@
     width: auto;
 }
 
-.more-modes-container {
+.more-modes {
     color: white;
     text-align: center;
     font-style: italic;
     text-shadow: 2px 2px 1px #2a1540;
 }
 
-.more-modes-container a {
-    text-decoration: none;
+.more-modes-text {
+    text-align: justify;
 }
