--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
     cursor: pointer;
 }
 
+.slide-horizontal {
+    height: 200px;
+    width: auto;
+    display: inline-block;
+    margin-bottom: 0.5em;
+    cursor: pointer;
+}
+
 .slide2 {
     height: 430px;
     width: auto;
